<resources>
    <string name="app_name">RGB Controller</string>

    <string name="scanning">Scanning</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bluetooth_not_supported">Fatal error: Bluetooth is not supported</string>
    <string name="permission_title">Permission Needed</string>
    <string name="permission_body">Location access is required to get scan results.</string>
    <string name="permission_not_granted">Permission is not granted. Unable to scan devices.</string>

    <string name="r">R</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="auto_1">1</string>
    <string name="auto_2">2</string>
    <string name="auto_3">3</string>
    <string name="auto_4">4</string>
    <string name="auto_5">5</string>
    <string name="auto_6">6</string>
    <string name="auto_7">7</string>
    <string name="auto_8">8</string>
    <string name="auto_9">9</string>
    <string name="led_1">Led 1</string>
    <string name="led_2">Led 2</string>
    <string name="led_3">Led 3</string>
    <string name="dimmer_1">Dimmer 1</string>
    <string name="dimmer_2">Dimmer 2</string>
    <string name="dimmer_3">Dimmer 3</string>
</resources>