<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2">

    <LinearLayout
        android:id="@+id/layout_left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_seek_bar_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/r" />

                <SeekBar
                    android:id="@+id/sb_red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="99"
                    android:progressTint="@color/softRedMaterial"
                    android:thumbTint="@color/redMaterial" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_seek_bar_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g" />

                <SeekBar
                    android:id="@+id/sb_green"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="99"
                    android:progressTint="@color/softGreenMaterial"
                    android:thumbTint="@color/greenMaterial" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_seek_bar_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b" />

                <SeekBar
                    android:id="@+id/sb_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="99"
                    android:progressTint="@color/softBlueMaterial"
                    android:thumbTint="@color/blueMaterial" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_analogue_and_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.jkm.rgbcontroller.AnalogueView
                android:id="@+id/av_controller"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/activity_vertical_margin" />

            <LinearLayout
                android:id="@+id/layout_mode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bt_mode_1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mode_1" />

                <Button
                    android:id="@+id/bt_mode_2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mode_2" />

                <Button
                    android:id="@+id/bt_mode_3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mode_3" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_keypad"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_keypad_row_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_keypad_1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_1"
                android:textSize="@dimen/font_large" />

            <Button
                android:id="@+id/bt_keypad_2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_2"
                android:textSize="@dimen/font_large" />

            <Button
                android:id="@+id/bt_keypad_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_3"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_keypad_row_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_keypad_4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_4"
                android:textSize="@dimen/font_large" />

            <Button
                android:id="@+id/bt_keypad_5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_5"
                android:textSize="@dimen/font_large" />

            <Button
                android:id="@+id/bt_keypad_6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_6"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_keypad_row_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_keypad_7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_7"
                android:textSize="@dimen/font_large" />

            <Button
                android:id="@+id/bt_keypad_8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_8"
                android:textSize="@dimen/font_large" />

            <Button
                android:id="@+id/bt_keypad_9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auto_9"
                android:textSize="@dimen/font_large" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>